# django202605

./: .gitignore  Dockerfile  Readme.md  admin-postgresql.sql  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  feed.py  manage.py  notebook_orm.ipynb  pyproject.toml  test_api.http
app_movie/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app_movie/migrations/: 0001_initial.py  0002_alter_play_actor_alter_play_movie.py  0003_alter_play_unique_together.py
app_people/: admin.py  apps.py  models.py  serialisers.py  urls.py  views.py
app_people/management/commands/: queries.py
app_people/migrations/: 0001_initial.py  0002_person_is_alive.py
netpy/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
