[project]
name = "netpy"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework",
    "django-extensions",
    "drf-spectacular",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar",
    "jupyterlab",
    "ipython",
]
deploy = [
    "gunicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netpy", "app_movie", "app_people"]
